@@ -70,7 +70,8 @@ public class SingleFragmentTestActivity extends Activity {
         if (savedInstanceState == null && findViewById(R.id.main_frame) != null) {
             try {
                 Fragment fragment = (Fragment) Class.forName(
-                        intent.getStringExtra(EXTRA_FRAGMENT_NAME)).newInstance();
+                        intent.getStringExtra(EXTRA_FRAGMENT_NAME))
+                        .getDeclaredConstructor().newInstance();
                 FragmentTransaction ft = getFragmentManager().beginTransaction();
                 ft.replace(R.id.main_frame, fragment);
                 ft.commit();
