@@ -26,10 +26,13 @@ import android.view.View.OnFocusChangeListener;
 import android.view.ViewGroup;
 import android.widget.TextView;
 
+import androidx.annotation.NonNull;
+import androidx.annotation.Nullable;
 import androidx.leanback.test.R;
 import androidx.recyclerview.widget.ConcatAdapter;
 import androidx.recyclerview.widget.RecyclerView;
 
+import java.lang.reflect.InvocationTargetException;
 import java.util.ArrayList;
 
 public class GridActivity extends Activity {
@@ -122,7 +125,12 @@ public class GridActivity extends Activity {
         mGridView.setWindowAlignmentOffsetPercent(35);
         mGridView.setOnChildSelectedListener(new OnChildSelectedListener() {
             @Override
-            public void onChildSelected(ViewGroup parent, View view, int position, long id) {
+            public void onChildSelected(
+                    @NonNull ViewGroup parent,
+                    @Nullable View view,
+                    int position,
+                    long id
+            ) {
                 if (DEBUG) Log.d(TAG, "onChildSelected position=" + position +  " id="+id);
             }
         });
@@ -160,15 +168,15 @@ public class GridActivity extends Activity {
         try {
             if (alignmentClass != null) {
                 mAlignmentProvider = (GridWidgetTest.ItemAlignmentFacetProvider)
-                        Class.forName(alignmentClass).newInstance();
+                        Class.forName(alignmentClass).getDeclaredConstructor().newInstance();
             }
             if (alignmentViewTypeClass != null) {
                 mAlignmentViewTypeProvider = (GridWidgetTest.ItemAlignmentFacetProvider)
-                        Class.forName(alignmentViewTypeClass).newInstance();
+                        Class.forName(alignmentViewTypeClass).getDeclaredConstructor().newInstance();
             }
             if (viewTypeClass != null) {
                 mViewTypeProvider = (GridWidgetTest.ViewTypeProvider)
-                        Class.forName(viewTypeClass).newInstance();
+                        Class.forName(viewTypeClass).getDeclaredConstructor().newInstance();
             }
         } catch (ClassNotFoundException ex) {
             throw new RuntimeException(ex);
@@ -176,6 +184,10 @@ public class GridActivity extends Activity {
             throw new RuntimeException(ex);
         } catch (IllegalAccessException ex) {
             throw new RuntimeException(ex);
+        } catch (InvocationTargetException e) {
+            throw new RuntimeException(e);
+        } catch (NoSuchMethodException e) {
+            throw new RuntimeException(e);
         }
 
         super.onCreate(savedInstanceState);
